# fastapi-example

./: main.py  pyproject.toml
bruno/: bruno.json  create-item.bru  delete-item.bru  get-item.bru  list-items.bru  update-item.bru
