[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Memo Chou <memochou1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.2"}
ruff = "^0.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
